// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown render renders correctly with correct as true 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "icon": "Dropdown-icon-3",
      "label": "Dropdown-label-6",
      "menuRoot": "Dropdown-menuRoot-5",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-2",
      "selected": "Dropdown-selected-4",
    }
  }
  correct={true}
  disabled={false}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;

exports[`Dropdown render renders correctly with default props 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "icon": "Dropdown-icon-3",
      "label": "Dropdown-label-6",
      "menuRoot": "Dropdown-menuRoot-5",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-2",
      "selected": "Dropdown-selected-4",
    }
  }
  correct={false}
  disabled={false}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;

exports[`Dropdown render renders correctly with disabled prop as true 1`] = `
<Dropdown
  choices={
    Array [
      Object {
        "id": undefined,
        "label": "Jumped",
        "value": "Jumped",
      },
      Object {
        "id": undefined,
        "label": "Laughed",
        "value": "Laughed",
      },
      Object {
        "id": undefined,
        "label": "Smiled",
        "value": "Smiled",
      },
    ]
  }
  classes={
    Object {
      "icon": "Dropdown-icon-3",
      "label": "Dropdown-label-6",
      "menuRoot": "Dropdown-menuRoot-5",
      "root": "Dropdown-root-1",
      "selectMenu": "Dropdown-selectMenu-2",
      "selected": "Dropdown-selected-4",
    }
  }
  correct={false}
  disabled={true}
  id="1"
  onChange={[MockFunction]}
  value="Jumped"
/>
`;
